--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #content {
@@ -8,22 +9,38 @@ body {
     background-color: aquamarine;
 
     display: grid;
-    /* grid-template-columns: 1fr; */
     grid-template-rows: 0.1fr 1fr 0.1fr;
 }
 
 .header {
+    font-family: Tahoma, sans-serif;
+    font-size: 32px;
+    /* padding-bottom: 2px; */
+
     background-color: skyblue;
     display: grid;
     grid-template-columns: 4fr 1fr 1fr 1fr;
 }
 
+.logo {
+    margin: 8px;
+    display: flex;
+    align-items: center;
+}
+
 .home, .menu, .contacts {
-    text-align: center;
+    /* text-align: center; */
+    font-size: 24px;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .home:hover, .menu:hover, .contacts:hover {
     cursor: pointer;
+    box-shadow: 0px -30px 5px white inset;
+    background-color: rgba(135, 207, 235, 0.681);
 }
 
 .info {
