--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@ body {
     background-color: aquamarine;
 
     display: grid;
-    grid-template-rows: 0.1fr 1fr 0.1fr;
+    grid-template-rows: 0.15fr 1fr 0.1fr;
 }
 
 .header {
@@ -31,6 +31,7 @@ body {
 .home, .menu, .contacts {
     /* text-align: center; */
     font-size: 24px;
+    padding-bottom: 6px;
 
     display: flex;
     justify-content: center;
