--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
+/* * {
+    outline: 1px solid red;
+} */
+
 body {
+    /* height: 100vh; */
+    width: 100vw;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -9,7 +15,7 @@ body {
     background-color: aquamarine;
 
     display: grid;
-    grid-template-rows: 0.15fr 1fr 0.1fr;
+    grid-template-rows: 12% 1fr 8%;
 }
 
 .header {
@@ -64,11 +70,9 @@ body {
     /* background-image: url(./images/hd-wallpaper-g9e0f307b9_1920.png); */
     /* background-size: cover;
     background-position: right; */
-    height: 100%;
-    width: 840px;
-
     /* height: 100%; */
     /* align-self: center; */
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,13 +102,14 @@ body {
 
 .slide img {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    height: 90%;
 }
 
 .navigation-manual {
     position: absolute;
     width: 800px;
-    margin: 20px;
+    margin: 26px;
     display: flex;
     justify-content: center;
     align-self: flex-end;
@@ -112,7 +117,7 @@ body {
 
 .manual-btn {
     border: 2px solid #98795C;
-    padding: 5px;
+    padding: 8px;
     border-radius: 10px;
     cursor: pointer;
     transition: 1s;
