--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@
     outline: 1px solid red;
 } */
 
+:root {
+    --info-background: #593F39;
+    --header-backgroud: #8C5042;
+    --footer-background: #BF8C6F;
+}
+
 body {
     /* height: 100vh; */
     width: 100vw;
@@ -12,7 +18,6 @@ body {
 #content {
     height: 100vh;
     width: 100vw;
-    background-color: aquamarine;
 
     display: grid;
     grid-template-rows: 12% 1fr 8%;
@@ -23,7 +28,8 @@ body {
     font-size: 32px;
     /* padding-bottom: 2px; */
 
-    background-color: skyblue;
+    background-color: var(--header-backgroud);
+    color: white;
     display: grid;
     grid-template-columns: 4fr 1fr 1fr 1fr;
 }
@@ -46,12 +52,13 @@ body {
 
 .home:hover, .menu:hover, .contacts:hover {
     cursor: pointer;
-    box-shadow: 0px -30px 5px white inset;
-    background-color: rgba(135, 207, 235, 0.681);
+    box-shadow: 0px -30px 5px inset;
+    background-color: var(--header-backgroud);
+    /* opacity: 0.7; */
 }
 
 .info {
-    background-color: #42312A;
+    background-color: var(--info-background);
     /* background-image: url(/src/images/background-2132909_1920.jpg); */
     display: flex;
     justify-content: space-between;
@@ -108,8 +115,8 @@ body {
 
 .navigation-manual {
     position: absolute;
-    width: 800px;
-    margin: 26px;
+    width: 660px;
+    margin: 20px;
     display: flex;
     justify-content: center;
     align-self: flex-end;
@@ -120,7 +127,7 @@ body {
     padding: 8px;
     border-radius: 10px;
     cursor: pointer;
-    transition: 1s;
+    transition: .5s;
 }
 
 .manual-btn:not(:last-child) {
@@ -167,6 +174,7 @@ body {
 
 .footer {
     display: grid;
+    background-color: var(--footer-background);
 }
 
 ul {
