--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
     width: 100vw;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
 }
 
 #content {
@@ -25,25 +26,23 @@ body {
 
 .header {
     font-family: Tahoma, sans-serif;
-    font-size: 32px;
-    /* padding-bottom: 2px; */
 
     background-color: var(--header-backgroud);
-    color: white;
     display: grid;
-    grid-template-columns: 4fr 1fr 1fr 1fr;
+    grid-template-columns: 55% 1fr 1fr 1fr;
 }
 
 .logo {
-    margin: 8px;
+    font-size: 2rem;
+    padding-left: 1em;
     display: flex;
     align-items: center;
 }
 
 .home, .menu, .contacts {
     /* text-align: center; */
-    font-size: 24px;
-    padding-bottom: 6px;
+    font-size: 1.25rem;
+    padding-bottom: .5em;
 
     display: flex;
     justify-content: center;
@@ -65,20 +64,11 @@ body {
 }
 
 .description {
-    color: white;
-    margin-right: 132px;
-    padding-left: 28px;
-    /* text-align: start; */
+    font-size: 1.25rem;
+    padding-left: 1.5em;
 }
 
 .img {
-    /* border: solid black 2px; */
-    /* background-image: url(./images/slide-image1.jpg); */
-    /* background-image: url(./images/hd-wallpaper-g9e0f307b9_1920.png); */
-    /* background-size: cover;
-    background-position: right; */
-    /* height: 100%; */
-    /* align-self: center; */
     width: 45%;
     display: flex;
     justify-content: center;
