--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@
 }
 
 body {
-    /* height: 100vh; */
     width: 100vw;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -41,7 +40,6 @@ body {
 }
 
 .home, .menu, .contacts {
-    /* text-align: center; */
     font-size: 1.25rem;
     padding-bottom: .5em;
 
@@ -54,12 +52,10 @@ body {
     cursor: pointer;
     box-shadow: 0px -30px 1.25rem -1rem #98795C inset;
     background-color: var(--header-backgroud);
-    /* opacity: 0.7; */
 }
 
 .info {
     background-color: var(--info-background);
-    /* background-image: url(/src/images/background-2132909_1920.jpg); */
     display: flex;
     justify-content: space-between;
 }
@@ -100,7 +96,6 @@ body {
 
 .slide img {
     width: 100%;
-    /* height: 100%; */
     height: 90%;
 }
 
@@ -174,7 +169,6 @@ ul {
     padding: 0;
     display: flex;
     justify-content: space-around;
-    /* align-items: center; */
 }
 
 li {
@@ -188,6 +182,10 @@ li p {
     margin: 0;
 }
 
+li :hover {
+    cursor: pointer;
+}
+
 /* menu page */
 /* header and footer are the same */
 
@@ -195,12 +193,12 @@ li p {
     width: 100%;
     display: flex;
     flex-direction: column;
-    border: 2px solid black;
+    border: 2px solid #2b2321;
 }
 
 div[class^='item'] {
     display: flex;
-    border: 2px solid black;
+    border: 2px solid #2b2321;
 }
 
 div[class^='desc-item'] {
@@ -209,7 +207,6 @@ div[class^='desc-item'] {
     padding-left: 1em;
     white-space: pre-line; 
 }
-/* add bottom border to the header in a .js file */
 
 /* contacts page */
 
@@ -229,7 +226,6 @@ div[class^='desc-item'] {
 }
 
 .address {
-    /* border: 2px solid black; */
     display: flex;
     padding: 2em 0;
     border-bottom: 3px solid #2b2321;
@@ -246,9 +242,7 @@ div[class^='desc-item'] {
 }
 
 .owner {
-    /* border: 2px solid black; */
     display: flex;
-    /* padding: 1em; */
     padding: 2em 0;
     border-bottom: 3px solid #2b2321;
 }
@@ -275,10 +269,8 @@ div[class^='desc-item'] {
 }
 
 .thanks {
-    /* border: 2px solid black; */
     display: flex;
     padding: 2em 0;
-    /* padding: 1em; */
 }
 
 .thanks-img {
